# aerphanas.github.io

./: .gitignore  404.html  BACA-AKU.md  Containerfile.Hakyll  LICENSE  Makefile  README.md  README.org  about.md  about.rst  aerphanas-github-io.cabal  api.hs  config.toml  default.nix  index.html  robots.txt  site.hs
.devcontainer/: Dockerfile
.github/: FUNDING.yml
Docker/: Containerfile  Containerfile.Kompor
app/: Main.hs
css/: default.css
docs/: about.html  archive.html  atom.xml  index.html  sitemap.xml
etc/: about.md  about.org
images/: produktif-bersama-gnome-desktop-environment-vid3.webm  produktif-bersama-gnome-desktop-environment-vid4.webm  produktif-bersama-gnome-desktop-environment-vid5.webm  produktif-bersama-gnome-desktop-environment-vid8.webm  site.webmanifest
post-tmp/: 2022-10-29-Linux_Hi-Res_Audio.md  2022-11-08-Linux_Container.md  2022-12-08-Linux_Filesystem,_keluarga_extfs.md  2022-12-13-Linux_Filesystem,_Btrfs.md  2022-12-21-Kontribusi_Open_Source_Software.md  2023-02-05-Alternatif_Docker_-_Podman_Pod.md  2023-02-15-Install_Software_dari_AUR.md  2023-03-18-Tail_Recursion.md  2023-04-13-Produktif_Bersama_Gnome_Desktop_Environment.md  2023-05-08-Menambahhan_Aplikasi_Launcher_di_App_Menu.md
posts/: 2022-08-23-Lorem Ipsum.markdown  2022-08-23-Lorem Ipsum.md  2022-08-23-Unix Filesystem.md  2022-08-23-Unix_FileSystem.md  2022-08-23-Unix_FileSystem.org  2022-08-23-unix filesystem.md  2022-08-24-Lorem Ipsum.md  2022-08-25-Lorem Ipsum.md  2022-08-26-Lorem Ipsum.md  2022-08-27-Lorem Ipsum.md  2022-08-28-Lorem Ipsum.md  2022-08-29-Lorem Ipsum.md  2022-08-30-Lorem Ipsum.md  2022-08-31-Lorem Ipsum.md  2022-09-01-Lorem Ipsum.md  2022-09-02-Lorem Ipsum.md  2022-10-29-Linux_Hi-Res_Audio.md  2022-10-29-Linux_Hi-Res_Audio.org  2022-10-29-linux hires audio.md  2022-11-08 -> Linux Container.md  2022-11-08-Linux Container.md  2022-11-08-Linux_Container.md  2022-11-08-Linux_Container.org  2022-12-04 -> Melatih Algoritma.md  2022-12-04-Melatih_Algoritma.md  2022-12-04-Melatih_Algoritma.org  2022-12-08-Linux_Filesystem,_keluarga_extfs.md  2022-12-08-Linux_Filesystem,_keluarga_extfs.org  2022-12-10-Linux_Filesystem,_keluarga_extfs.md  2022-12-12-Linux_Filesystem,_Btrfs.md  2022-12-13-Linux_Filesystem,_Btrfs.md  2022-12-13-Linux_Filesystem,_Btrfs.org  2022-12-20-Kontribusi_Open_Source.md  2022-12-21-Kontribusi_Open_Source_Software.md  2022-12-21-Kontribusi_Open_Source_Software.org  2022-12-22-Post_Ini_Dibuat_oleh_ChatGPT.md  2022-12-22-Post_Ini_Dibuat_oleh_ChatGPT.org  2023-01-01-Ada_Apa_Dengan_Fungsional_Programming.md  2023-01-06-Ada_Apa_Dengan_Fungsional_Programming.md  (+35 more)
(+61 files in other folders)
