cabal-version:      3.6
name:               aerphanas-github-io
version:            0.1.0.0
synopsis:           aerphanas static site blog
description:        static site blog using hakyll
copyright:          aerphanas 2023
license:            BSD-3-Clause
license-file:       LICENSE
author:             aerphanas
maintainer:         muhamadaviv14@gmail.com
homepage:           https://github.com/aerphanas/aerphanas.github.io
bug-reports:        https://github.com/aerphanas/aerphanas.github.io/issues
build-type:         Simple
category:           Web

executable kompor
  main-is:          Main.hs
  build-depends:    base == 4.16.*
                  , hakyll == 4.15.*
                  , pandoc == 2.19.*
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
